# OneBudget-api

./: .env  .gitignore  Readme.md  app_logger.py  config.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt  sql_app.db
.github/ISSUE_TEMPLATE/: feature_request.md  new_endpoint_proposal.md  new_issue_template.md  new_pull_request_template_request.md  new_query_parameter_request.md
.github/PULL_REQUEST_TEMPLATE/: new_endpoint_temate.md
accounts-db/: Dockerfile  accounts-db.yaml
accounts-db/initdb/: 0-accounts-schema.sql  1-load-testdata.sh
api/: __init__.py  config.py  dockerfile  jwtRS256.key  jwtRS256.key.pub  main.py  requirements.txt
api/db/: __init__.py  budget.py  category.py  flag.py  user.py
api/internal/: .env  __init__.py  config.py
api/models/: __init__.py  budget.py  category.py  flag.py  user.py
api/routers/beta/: __init__.py
api/routers/beta/budgets/: __init__.py
api/routers/beta/categories/: __init__.py
api/routers/beta/months/: __init__.py
db/: __init__.py  category.py  flag.py
models/: __init__.py  budget.py
routers/beta/budgets/: __init__.py
routers/beta/oauth/: __init__.py
userservice/: __init__.py  budgets.py  categories.py  db.py  decorators.py  dockerfile  logging.conf  months.py  oauth.py  old  requirements.txt  service.py  shared.py  user_token.py
userservice/db/: __init__.py  budget.py  category.py  month.py  user.py
userservice/endpoints/: budgets.py  categories.py
userservice/tests/: constants.py  test_db.py  test_userservice.py
vault/: __init__.py
(+4 files in other folders)
